<resources>
    <!--
    To load a profile of convertible units, simply add the name of the profile under the array
    "profiles". Then create 2 new string arrays named "units<profile name>" (under which you list
    all names of the units within this profile), and "units<profileName>Values" (under which you
    list all of the multipliers to convert the units amongst each other).

    Any profile added should have at least 2 items, and 1 of the items should have a multiplier of 1,
    to serve as a reference to convert the items freely amongst each other.

    For example, if I want to convert apples to apple pies, and I know 1 apple pie requires 3 apples,
    I would enter the following:

    Under <string-array name="profiles">, add: <item>ApplesToPies</item>
    Then, right underneath the last string array, add:

    <string-array name="unitsApplesToPies">
        <item>Apples</item>
        <item>Pies</item>
    </string-array>
    <string-array name="unitsApplesToPiesValues">
        <item>3</item>
        <item>1</item>
    </string-array>

    Then save the file and open the app. You should see ApplesToPies as an option for conversion.

    Optional (advanced): You can also add a base number to apply during multiplication, this base
    number will be added before and subtracted after multiplication. To use this, simply add another
    string array named "units<profile name>Base" and add a single item in this array containing the
    value of the base number. Check the profile for "Temperature" for an example of how this works.
    -->

    <string-array name="profiles">
        <item>Weight</item>
        <item>Distance</item>
        <item>Volume</item>
        <item>Speed</item>
        <item>Temperature</item>
    </string-array>
    <string-array name="unitsWeight">
        <item>Carats</item>
        <item>Grains</item>
        <item>Grams</item>
        <item>Kilograms</item>
        <item>Ounces</item>
        <item>Pounds</item>
        <item>Stones</item>
    </string-array>
    <string-array name="unitsWeightValues">
        <item>5000</item>
        <item>15432.35835</item>
        <item>1000</item>
        <item>1</item>
        <item>32.15073971</item>
        <item>2.204622622</item>
        <item>0.157473044</item>
    </string-array>
    <string-array name="unitsDistance">
        <item>Centimeter</item>
        <item>Inch</item>
        <item>Feet</item>
        <item>Yard</item>
        <item>Kilometer</item>
        <item>Mile</item>
    </string-array>
    <string-array name="unitsDistanceValues">
        <item>100000</item>
        <item>39370.07874</item>
        <item>3280.839895</item>
        <item>1093.613298</item>
        <item>1</item>
        <item>20.621371192</item>
    </string-array>
    <string-array name="unitsVolume">
        <item>Liter</item>
        <item>Milliliter</item>
        <item>US Gal</item>
        <item>US fl oz</item>
    </string-array>
    <string-array name="unitsVolumeValues">
        <item>1</item>
        <item>1000</item>
        <item>0.2464172052</item>
        <item>33.8140227</item>
    </string-array>
    <string-array name="unitsSpeed">
        <item>km/h</item>
        <item>mile/h</item>
        <item>knot</item>
        <item>ft/s</item>
        <item>m/s</item>
    </string-array>
    <string-array name="unitsSpeedValues">
        <item>3.6</item>
        <item>2.236936292</item>
        <item>1.943844492</item>
        <item>3.280839895</item>
        <item>1</item>
    </string-array>
    <string-array name="unitsTemperature">
        <item>Celcius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="unitsTemperatureValues">
        <item>1</item>
        <item>1.8</item>
    </string-array>
    <string-array name="unitsTemperatureBase">
        <item>40</item>
    </string-array>

    <string name="app_name">UnitConverter</string>
    <string name="action_settings">Settings</string>
    <string name="titleTextString">Unit Converter</string>
    <string name="subtitleTextString">What would you like to convert today?</string>
    <string name="txtBaseUnit">I\'d like to convert</string>
    <string name="txtInto">into</string>
    <string name="btnConvert">Convert</string>
    <string name="defaultResult">Please enter a number, select your units and tap \'Convert\'</string>
    <string name="inputHint">Please enter a number</string>
    <string name="isEqualTo">is equal to</string>
    <string name="conversionMsgBoxTitle">Conversion</string>
    <string name="noticeMsgBoxTitle">Oops!</string>
    <string name="noNumberError">You did not enter a number to convert... Did you forget? </string>
    <string name="errorMsgBoxTitle">Error</string>
    <string name="unitsAndOrValuesNotFoundError">"The app could not find the units and/or values of a profile listed in strings.xml. The app will now exit."</string>
    <string name="unitsAndUnitValuesDontMatchError">"The number of units and unit values provided in strings.xml don\'t match. The app will now exit."</string>
    <string name="nonParsableUnitValueError">"There was an incorrect unit value found in strings.xml. The app will now exit."</string>
    <string name="notEnoughUnitsError">"There was a profile found in strings.xml with less than 2 units. This is not supported. The app will now exit."</string>
    <string name="msgBoxCloseButtonTitle">Close</string>

</resources>
