<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".UnitConverterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleTextString"
        android:id="@+id/txtMainTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/fontSizeTitle"
        android:layout_marginTop="@dimen/titleMargin"
        android:layout_marginBottom="@dimen/titleMargin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitleTextString"
        android:id="@+id/txtSubtitle"
        android:layout_below="@+id/txtMainTitle"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/input"
        android:layout_marginTop="@dimen/defaultMargin"
        android:layout_marginBottom="@dimen/defaultMargin"
        android:layout_below="@+id/spinnerCategory"
        android:layout_centerHorizontal="true"
        android:hint="@string/inputHint" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerUnitsBase"
        android:prompt="@string/txtBaseUnit"
        android:layout_below="@+id/input"
        android:layout_marginTop="@dimen/defaultMargin"
        android:layout_marginBottom="@dimen/defaultMargin"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtInto"
        android:id="@+id/txtInto"
        android:layout_below="@+id/spinnerUnitsBase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/defaultMargin"
        android:layout_marginBottom="@dimen/defaultMargin" />


    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerUnitsResult"
        android:layout_below="@+id/txtInto"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="false" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnConvert"
        android:id="@+id/btnConvert"
        android:layout_below="@+id/spinnerUnitsResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/defaultMargin"
        android:layout_marginBottom="@dimen/defaultMargin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultResult"
        android:id="@+id/txtResult"
        android:layout_below="@+id/btnConvert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/defaultMargin"
        android:layout_marginBottom="@dimen/defaultMargin" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/profiles"
        android:id="@+id/spinnerCategory"
        android:layout_below="@+id/txtSubtitle"
        android:layout_marginTop="@dimen/defaultMargin"
        android:layout_marginBottom="@dimen/defaultMargin"
        android:layout_centerHorizontal="true"></Spinner>
</RelativeLayout>
